--- a/MVVMAppTest/App.xaml
+++ b/MVVMAppTest/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="AppTest.App"
+    x:Class="MVVMAppTest.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AppTest"
+    xmlns:local="using:MVVMAppTest"
     RequestedTheme="Light">
 
 </Application>
